@@ -156,13 +156,16 @@
         <col id="0">/usr/bin/gksudo</col>
       </row>
       <row>
-        <col id="0">/usr/bin/kdesu</col>
-      </row>
-      <row>
         <col id="0">/usr/bin/gnomesu</col>
       </row>
       <row>
         <col id="0">/usr/bin/xdg-su</col>
+      </row>
+      <row>
+        <col id="0">/usr/bin/kdesu</col>
+      </row>
+      <row>
+        <col id="0">/usr/bin/kdesudo</col>
       </row>
       <row>
         <col id="0">/bin/su</col>
